# autohooks-plugin-isort

./: CHANGELOG.md  Pipfile  README.md  RELEASE.md  pyproject.toml  setup.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-python.yml  deploy-pypi.yml  update-header.yml
autohooks/plugins/isort/: __init__.py  __version__.py  isort.py
changelog/: v22.11.0.md  v22.3.0.md  v22.8.0.md
tests/: isort_test.py  pyproject.test.toml  test_isort.py
